--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Mad Libs in Console</title>
+	<link rel="stylesheet" href="main.css">
 </head>
 <body>
 
